# scratch

./: .gitignore  .travis.yml  README.md
arduino/: .gitignore  Makefile  README.md  config.mk  fetch.sh  led.c  libarduino.mk
electron/my-app/: index.html  main.js  package.json  serial.js
esp8266/espruino/: test-code.js
esp8266/ws-pio-0/: .gitignore  readme.md  test.html
espruino/: test-code.js
hello-cmake/: .gitignore  CMakeLists.txt  notes.txt  prj_config.h.in  prj_main.cc
hello-cmake/samplelib/: CMakeLists.txt  samplelib.cc  samplelib.h
hello-kernel/: hello.c
hello-uio/: Makefile  hello-test  hello.c  hello_log.h  hello_test.c  test.sh
neon/: main.py  notes.md  readme.md  requirements.txt
opencv/: README.md  main.py  notes.md
react/beer/: index.html  nodemon.json  notes.txt  package.json  seed.js  server.js  ssc.js
react/counter/: app.jsx  index.html  main.js  package.json  sensors.js  webpack.config.js
uv4l2/: .gitignore  Makefile  log.h  main.cpp  test.sh  testgen.cpp  testgen.h  uv4l2.cpp  uv4l2.h  uv4l2_hooks.cpp  v4l2_example.c
uv4l2/utils/: safe_queue.cpp  safe_queue.h
vagrant-test/: Vagrantfile
vagrant-test/vagrant/: systemconfig.sh  userconfig.sh
vgen/: .gitignore  gen_test_video.py  main.py  notes.md  readme.md  vgen.py
vgen/.spyproject/: workspace.ini
web/: .README.md.swp  README.md  ex_socket_io.js  example1.js  server.js  test.html
web/public/: index.html
web/svis/: .gitignore  .tern-project  Makefile  bower.json  client.cpp  device.cpp  env.sh  index.html  package.json  readme.md  server.js
web/svis/public/: bl.js  (+11 more)
(+54 files in other folders)
